feat: add departments func and docs swagger
