# api/routers/human_resources_management/router.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"go.mongodb.org/mongo-driver/mongo"
 	"shop_erp_mono/api/middlewares"
+	departmentroute "shop_erp_mono/api/routers/human_resources_management/department"
 	roleroute "shop_erp_mono/api/routers/human_resources_management/role"
 	userroute "shop_erp_mono/api/routers/human_resources_management/user"
 	"shop_erp_mono/bootstrap"
@@ -29,4 +30,5 @@ func SetUp(env *bootstrap.Database, timeout time.Duration, db *mongo.Database, g
 	// All Public APIs
 	userroute.UserRouter(env, timeout, db, publicRouter)
 	roleroute.RoleRouter(env, timeout, db, publicRouter)
+	departmentroute.DepartmentRouter(env, timeout, db, publicRouter)
 }
